<resources>
    <string name="app_name">Shwe English Lessons</string>
    <string name="action_settings">Settings</string>
    <string name="menu_privacy1">Privacy Policy</string>
    <string name="menu_exit">Exit App</string>
    <string name="rating">Rate App</string>
    <string name="navigation_drawer_open">Nav Open</string>
    <string name="navigation_drawer_close">Nav Close</string>
    <string name="download">ဒေါင်းလုပ်ယူရန်များ</string>
    <!--These are all test app ID and AdUnit IDS -->
    <string name="admob_app_id">ca-app-pub-4137439985376631~4759465300</string>
    <string name="banner_2021">ca-app-pub-3940256099942544/6300978111</string>
    <string name="exit_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="shwe_lessons_preload">ca-app-pub-3940256099942544/1033173712</string>
    <string name="inter_goback">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_open_ads">ca-app-pub-3940256099942544/3419835294</string>

    <string name="splah_text">Learn English for free!</string>
    <string name="splash_description">Learn English on your finger tip!</string>
    <string name="exit_the_app">Exit</string>
    <string name="no">NO</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="app_exit_desc">Thank you for using our app. If you have any question, reach me at moemoetun4u@gmail.com</string>
    <string name="play_button">"play "</string>
    <string name="grammar_and_quiz">Grammar Quiz</string>
    <string name="conversations">Conversations</string>
    <string name="get_coins">Get Coins</string>
    <string name="coins_balance">Coin Balance</string>
    <string name="premium">Premium Contents</string>
    <string name="favorite">Favotites</string>
    <string name="take_notes">Take Notes</string>
    <string name="rate">Give 5 stars</string>
    <string name="send_feedback">Send Feedbacks</string>
    <string name="icon_description">Imgae Icon</string>
    <string name="card_title">recycler title</string>
    <string name="delete_btn">Delete your notes</string>
    <string name="note_holder">Your Notes</string>
    <string name="note_title_hint">Note Title</string>
    <string name="note_detail_hint">Note Details</string>
    <string name="save_note">Save Note</string>
    <string name="left_icon_description">left Icon Description</string>
    <string name="right_icon_description">Right Icon Description</string>
    <string name="detelte_button">delete button</string>
    <string name="save">save</string>
    <string name="expand_recycler_head">Expandable Recycler head</string>
    <string name="arrow_down">Arrow Down</string>
    <string name="grocery_and_stationary">Nested items of Expandable View</string>
    <string name="status">Status</string>
    <string name="right_and_wrong_indicator">Right And Wrong Indicator</string>
    <string name="question_goes_here">Quiz Question</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="next">Next</string>
    <string name="explanations">Explanations</string>

    <string name="charttext">Quiz Review</string>

    <string name="follow_youtube">Subscribe on YouTube</string>

    <string name="tabs_for_navigation">Tabs for navigation</string>
    <string name="play">Play</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="native_ads_call_button">Native Ads Action Button</string>
    <string name="btn_yes">YES</string>
    <string name="dismiss_dialog_button">NO</string>
    <string name="ad_attribution">Ad</string>
    <string name="now">Get</string>
    <string name="tabs">tabs</string>
    <string name="download_now">ဒေါင်းမယ်</string>
    <string name="place_holder_image">place holder image</string>
    <string name="if_you_want_the_title_and_description">If you want the title and description</string>
    <string name="online_text_desc">rewrite this code. Put tton, it goes to the corresponding url</string>

</resources>
