<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <!-- Image -->
        <ImageView android:id="@+id/circularImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/pen_50"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@string/place_holder_image" />

        <!-- Title -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/if_you_want_the_title_and_description"
            android:textSize="14sp"
            android:layout_marginStart="3dp"
            android:maxLines="1"
            android:textStyle="bold"
            android:layout_toEndOf="@id/circularImageView" />

        <!-- Description -->
        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/online_text_desc"
            android:textSize="13sp"
            android:layout_marginStart="3dp"
            android:maxLines="2"
            android:layout_toEndOf="@id/circularImageView"
            android:layout_below="@id/titleTextView"
            android:layout_marginTop="3dp"/>

        <!-- Learn More Button -->
        <Button
            android:id="@+id/learnMoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_now"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/descriptionTextView"
            android:layout_centerHorizontal="true"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginTop="0dp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
