<!-- activity_note_taking.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="Take Note Here"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:titleTextColor="@color/white" />
    <EditText
        android:id="@+id/noteTitle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/note_title_hint"
        android:autofillHints="Note Title"
        android:inputType="text" />

    <EditText
        android:id="@+id/noteDetail"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/noteTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/note_detail_hint"
        android:autofillHints="Note Details"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/noteDetail"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="16dp"
        android:text="@string/save_note" />

</RelativeLayout>
